# NickelHardcover

./: .gitignore  Dockerfile  LICENSE  README.md  justfile
.forgejo/nickeltc/: Dockerfile  action.yml
.forgejo/workflows/: build.yaml  build.yml
cli/: Cargo.toml  rustfmt.toml
cli/.cargo/: config.toml
cli/macros/: Cargo.toml
cli/macros/src/: lib.rs
cli/src/: bookmarks.rs  commands.rs  config.rs  database.rs  epub.rs  hardcover.rs  isbn.rs  main.rs  utils.rs
cli/src/commands/: getuser.rs  getuserbook.rs  insertjournal.rs  listbookmarks.rs  listeditions.rs  listjournal.rs  search.rs  setuserbook.rs  update.rs  updatejournal.rs
cli/src/graphql/: journal.graphql  mutation.graphql  query.graphql  review.graphql  schema.graphql  search.graphql  update.graphql
cli/src/graphql/mutations/: insertread.graphql  insertreadingjournal.graphql  insertuserbook.graphql  updatejournal.graphql  updateread.graphql  updatereadingjournal.graphql  updateuserbook.graphql
cli/src/graphql/queries/: getedition.graphql  geteditions.graphql  getjournal.graphql  getjournalquotes.graphql  getme.graphql  getreadingjournal.graphql  getuserid.graphql  searchbooks.graphql
cli/src/hardcover/: journal.rs  review.rs  search.rs  update.rs  utils.rs
hook/: .clangd  Makefile
hook/res/: config_example.ini  nickelhardcover.qrc
hook/src/: cli.cc  cli.h  files.h  menucontroller.cc  menucontroller.h  nickelhardcover.cc  nickelhardcover.h  settings.cc  settings.h  synccontroller.cc  synccontroller.h  syncqueue.cc  syncqueue.h  utils.cc  utils.h
hook/src/annotations/: annotationsdialog.cc  annotationsdialog.h  annotationsrow.cc  annotationsrow.h
hook/src/editions/: editionrow.cc  editionrow.h  editionsdialog.cc  editionsdialog.h
hook/src/insertjournal/: insertjournaldialog.cc  insertjournaldialog.h
hook/src/journal/: journaldialog.cc  journaldialog.h  journalentry.cc  journalentry.h
hook/src/review/: rating.cc  reviewdialog.cc  reviewdialog.h
hook/src/search/: bookrow.cc  bookrow.h  elidedlabel.cc  elidedlabel.h  searchdialog.cc  searchdialog.h
hook/src/settings/: checkboxrow.cc  checkboxrow.h  menurow.cc  menurow.h  settingsdialog.cc  settingsdialog.h  settingsrow.cc  (+3 more)
res/: config.ini  config_example.ini
(+14 files in other folders)
