[workspace]
resolver = "3"
members = ["macros"]

[package]
name = "nickel-hardcover-cli"
version = "0.4.2"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
argh = "0.1.13"
chrono = { version = "0.4.41", features = ["serde"] }
graphql_client = "0.16.0"
itertools = "0.14.0"
macros = { path = "./macros" }
quick-xml = "0.40.1"
rusqlite = { version = "0.40.0", features = ["bundled", "chrono"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serini = "0.2.0"
tokio = { version = "1.45.0", features = ["full"] }
tokio-retry = { version = "0.3.1", default-features = false }
zip = "8.6.0"

[dependencies.reqwest]
version = "0.13.4"
default-features = false
features = ["rustls","json", "gzip"]
